# ciot-c-old

./: .gitmodules  CMakeLists.txt  Insomnia.json  Insomnia_2023-06-29.har  Insomnia_2023-06-29.json  README.md  changelog.md  changes.md  sdkconfig.old  todo.md
main/: CMakeLists.txt  ciot_config_idf.h  ciot_config_linux.h  ciot_config_win.h  ciot_custom_config.h  idf_component.yml  main.c
main/common/: ciot_app.c  ciot_data_io.c  ciot_err.c  ciot_mqtt_dto.c  ciot_msg_dto.c  ciot_ntp_dto.c  ciot_ota_dto.c  ciot_settings.c  ciot_system_common.c  ciot_system_dto.c  ciot_tcp_dto.c  ciot_wifi_dto.c
main/host/: ciot_app.c  ciot_default_config.h  ciot_http_server.c  ciot_mqtt.c  ciot_ntp.c  ciot_storage.c  ciot_system.c  ciot_tcp.c  ciot_wifi.c
main/idf/: ciot_app.c  ciot_default_config.h  ciot_http_server.c  ciot_mqtt.c  ciot_ntp.c  ciot_ota.c  ciot_storage.c  ciot_system.c  ciot_tcp.c  ciot_wifi.c
main/include/: ciot_app.h  ciot_config.h  ciot_data_io.h  ciot_err.h  ciot_http_server.h  ciot_json.h  ciot_mqtt.h  ciot_msg_dto.h  ciot_ntp.h  ciot_ota.h  ciot_settings.h  ciot_storage.h  ciot_system.h  ciot_tasks.h  ciot_tcp.h  ciot_wifi.h
src/data/: ciot_msg_data.h
src/infra/: ciot_httpc.c  ciot_https.c  ciot_mqttc.c
src/interfaces/: ciot_iface.c
